lowConnectionPoolService/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: lowconnectionpool-service
  namespace: default
spec:
  selector:
    app: lowConnectionPoolService
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lowconnectionpoolservice-deploy
  namespace: default
spec:
  selector:                     # 定义 Deployment 如何查找要管理的 Pods
    matchLabels:
      app: lowConnectionPoolService
  template:
    metadata:
      labels:
        app: lowConnectionPoolService
    spec:

      containers:

      - name: lowconnectionpoolservice-container
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
            - name: nginx-index-file
              mountPath: /usr/share/nginx/html/
      volumes:
      - name: nginx-index-file
        configMap:
          name: lowconnectionpoolservice-configmap
      - name: nginx-config
        configMap:
          name: lowconnectionpoolservice-configmap
